# filehoster

./: .env  .gitignore  .replit  README.md  main.py  pyproject.toml  upload.html
.github/workflows/: Lint.yml
filehoster/: __init__.py  __main__.py  client.py
filehoster/htmlpages/: download.html  home.html  upload.html  uploadcom.html
